# AkaneRust

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs
src/bot/: client.rs  handler.rs  mod.rs  state.rs
src/bot/commands/: about.rs  eval.rs  exec.rs  help.rs  id.rs  info.rs  mod.rs  owner.rs  ping.rs  runtime.rs  tiktok.rs  unknown.rs
src/downloader/: facebook.rs  instagram.rs  mod.rs  tiktok.rs
