[package]
name = "AkaneRust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102" 
qr2term = "0.3.3"
reqwest = { version = "0.13.2", features = ["cookies", "json"] }
serde = "1.0.228"
serde_json = "1.0.149"
sysinfo = "0.38.4"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "time", "process", "fs"] }
toml = "1.1.0"
urlencoding = "2"   
wacore = "0.5.0"
wacore-binary = "0.5.0"
waproto = "0.5.0"
whatsapp-rust = "0.5.0"
whatsapp-rust-sqlite-storage = "0.5.0"
whatsapp-rust-tokio-transport = "0.5.0"
whatsapp-rust-ureq-http-client = "0.5.0"
